external-crates/move/crates/move-package-alt/tests/data/manifest_parsing_invalid/missing_minimal_required_field_name/Move.snap
---
source: crates/move-package-alt/tests/manifest_parsing_tests.rs
---
Err(TOML parse error at line 1, column 1
  |
1 | [package]
  | ^^^^^^^^^
missing field `name`
)
